# public/openapi.json
@@ -100,8 +100,66 @@
                 "tags": [
                     "Questions"
                 ],
-                "summary": "Delete the question with the provided question identifier",
+                "summary": "Edits the question with the provided question identifier",
                 "operationId": "editQuestion",
+                "parameters": [
+                    {
+                        "name": "questionId",
+                        "in": "path",
+                        "description": "ID of question to edit",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "requestBody": {
+                    "request": "EditQuestion",
+                    "description": "Object containing the new inforamtion needded to update the question stored with the privided identifier",
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/EditQuestionCommand"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "400": {
+                        "description": "Missing property or errors regarding data sent."
+                    },
+                    "404": {
+                        "description": "Quesiton not found"
+                    },
+                    "412": {
+                        "description": "Trying to edit a question that isn't owned by the authenticated user or it's open."
+                    },
+                    "200": {
+                        "description": "The question with changed values",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/Question"
+                                }
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "OAuth2.0-Token": [
+                            "user.management"
+                        ]
+                    }
+                ]
+            },
+            "delete": {
+                "tags": [
+                    "Questions"
+                ],
+                "summary": "Delete the question with the provided question identifier",
+                "operationId": "deleteQuestion",
                 "parameters": [
                     {
                         "name": "questionId",
